@@ -1,4 +1,8 @@
+* Aug  9 2014 Massimiliano Pala <madwolf@openca.org>
+- Optimized OCSP req and resp internal handling functions
+
 * Aug  6 2014 Massimiliano Pala <madwolf@openca.org>
+- Added additional checks for OCSP response signing
 - Added PKI_X509_OCSP_REQ_has_nonce() to easily detect NONCEs in OCSP requests
 - Moved to use calloc() to provide better cross-processes memory protection
 - Removed old commented code
